Fix alignement dans l'éditeur de niveaux

--- a/css/level-settings.css
+++ b/css/level-settings.css
@@ -97,7 +97,7 @@
 }
 
 .screen-level-settings .reset-button {
-  margin: 16px 0 0 0;
+  margin: 10px 0 0 0;
 }
 .screen-level-settings .reset-button button {
   font-size: 0.8em;
